<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ecwidizer</string>
    <string name="action_settings">Settings</string>
    <string name="store_id">Store id</string>
    <string name="store_key">Store key</string>
    <string name="dialog_settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="settings_header">Store configuration</string>
    <string name="prop_store_id">store_id</string>
    <string name="prop_store_key">store_key</string>
    <string name="action_search">aaa</string>
    <string name="action_compose">bbb</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Product price</string>
    <string name="add_product_title">Add new product to Ecwid store</string>
    <string name="product_description">Product description</string>
    <string name="title_activity_authorize_app">AuthorizeAppActivity</string>
    <string name="external_storage_not_available">Insert SD Card in your phone, please</string>
    <string name="title_activity_welcome">Welcome to Ecwidizer</string>
    <string name="connect_your_store_button">Connect Your Store</string>
    <string name="welcome_text">Bla-bla-bla please connect to your Ecwid store to access cool features of our great app bla-bla-bla.</string>

    <string name="waiting_for_data">Waiting for data....</string>
    <string name="launch_oauth_flow">Launch OAuth Flow</string>
    <string name="clear_credentials">Clear Credentials</string>
    <string name="oauth_googleplus">Google Plus OAuth2</string>
    <string name="oauth_googletasks">Google Tasks OAuth2</string>
    <string name="oauth_foursquare">Foursquare Oauth2</string>
    <string name="oauth">Oauth2</string>
    <string name="api_call">API</string>

</resources>
