<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_height="64dp"
            android:layout_width="match_parent"
            android:background="#0097D8"
            android:text="@string/settings_header"
            android:textColor="#FFFFFF"
            android:textSize="24dp"
            android:padding="15dp"
            android:textStyle="bold"
            />
    <EditText
            android:id="@+id/store_id"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/store_id" />
    <EditText
            android:id="@+id/store_key"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/store_key"/>
</LinearLayout>